# jiguanji

./: CMakeLists.txt  build2.bat
Documentation/: 上位机与下位机通信.md  协议.md  激光打标机自动调焦器设计要求20251119.docx  需求.md  需求整理后.md
Source/: BindSingals.cpp  MyObject.cpp  MyObject.h  MySeralPortListener.cpp  MySeralPortListener.h  Parameters.cpp  Parameters.h  SerialPort.cpp  SerialPort.h  WorkerThread.h  main.cpp
Source/MyQML/: CommunicationParameters.qml  FocusControl.qml  FocusParameters.qml  HeightWidget.qml  HeightWidget2.qml  MyButton1.qml  MyButton2.qml  MyButton3.qml  MySlider.qml  MyTextField.qml  MyWindow.qml  MyWindow2.qml  MyWindow3.qml  MyWindow_old.qml  QuickOperations.qml  SensorCalibration.qml  SensorParameters.qml  StatusArea.qml  StatusWidget.qml  SystemLog.qml  TabWidget.qml  TabWidget2.qml  TextedHeightWidget.qml  WorkMode.qml
